--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
 			<version>${rest-assured.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>1.3</version>
+		</dependency>
 
 		<!-- SELENIUM -->
 		<dependency>
