Add Task 2 - Workflow 1 commit.yml in github workflow

--- a/.github/workflows /commit.yml
+++ b/.github/workflows /commit.yml
@@ -1,1 +1,38 @@
+name: Workflow 1 - Test on All Branch except Main
 
+on:
+  push:
+    branches-ignore:
+      - main
+  workflow_dispatch:
+
+permissions:
+  contents: read
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    name: Unit & Integration Tests
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'adopt'
+          java-version: '17'
+
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
+      - name: Run Unit Tests
+        run: mvn -Dtest='es.codeurjc.web.nitflex.unit.**.*' test
+
+      - name: Run Integration Tests
+        run: mvn -Dtest='es.codeurjc.web.nitflex.integration.**.*' test
