--- a/.github/workflows/workflow2.yml
+++ b/.github/workflows/workflow2.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review]
     branches: [ main ]
+    paths-ignore:
+      - '.github/workflows/**'
+      - 'README.md'
   workflow_dispatch:
 
 permissions:
