--- a/.github/workflows/workflow3.yml
+++ b/.github/workflows/workflow3.yml
@@ -4,50 +4,93 @@ on:
   push:
     branches: [ main ]
   workflow_dispatch:
+  push:
+    paths:
+      - src/**
+      - pom.xml
+    branches:
+      - main
 
 permissions:
+  id-token: write
   contents: read
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.extract_version.outputs.VERSION }}
     name: Build, Push Docker Image, and Deploy to Azure
 
     steps:
+    - uses: actions/checkout@v4
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          distribution: 'adopt'
-          java-version: '17'
+          distribution: 'temurin'
+          java-version: '21'
 
-      - name: Get version from pom.xml
-        id: get_version
-        run: |
-          VERSION=$(mvn -q -Dexec.outputFile=/dev/stdout -Dexpression=project.version --non-recursive org.apache.maven.plugins:maven-help-plugin:3.2.1:evaluate)
-          echo "::set-output name=version::$VERSION"
+      - name: Extract version from pom.xml
+        id: extract_version
+        run: echo "VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_OUTPUT
 
-      - name: Login to Docker Hub
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+      - name: Run tests
+        run: mvn test
 
-      - name: Build and push Docker image
-        run: |
-          IMAGE_NAME=tu_usuario_dockerhub/nitflex:${{ steps.get_version.outputs.version }}
-          docker build -t $IMAGE_NAME .
-          docker push $IMAGE_NAME
+      - name: Generate Docker image with version tag
+        run: mvn spring-boot:build-image -DskipTests -Dspring-boot.build-image.imageName=${{ secrets.DOCKERHUB_USERNAME }}/posts:${{ steps.extract_version.outputs.VERSION }}
 
-      - name: Azure Login
-        uses: azure/login@v1
+      - name: Tag image as latest
+        run: docker tag ${{ secrets.DOCKERHUB_USERNAME }}/posts:${{ steps.extract_version.outputs.VERSION }} ${{ secrets.DOCKERHUB_USERNAME }}/posts:latest
+
+      - name: Extract version from pom.xml
+        id: get-version
+        run: echo "VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
+
+      - name: Generate Docker image
+        run: mvn spring-boot:build-image -DskipTests -Dspring-boot.build-image.imageName=${{ secrets.DOCKERHUB_USERNAME }}/posts:${{ env.VERSION }}
+
+      - name: Login to DockerHub
+        run: docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" -p "${{ secrets.DOCKERHUB_TOKEN }}"
+
+      - name: Push versioned image
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/posts:${{ steps.extract_version.outputs.VERSION }}
+
+      - name: Push latest image
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/posts:${{ env.VERSION }}
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: 'Az CLI login'
+        uses: azure/login@v2
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Deploy to Azure App Service
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: nitflex-production
-          images: tu_usuario_dockerhub/nitflex:${{ steps.get_version.outputs.version }}
+      - name: Extract version from pom.xml
+        id: extract_version
+        run: echo "VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
+
+      - name: 'Deploy container to Azure'
+        run: |
+          az container create \
+            --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
+            --name posts \
+            --image ${{ secrets.DOCKERHUB_USERNAME }}/posts:${{ env.VERSION }} \
+            --registry-login-server index.docker.io \
+            --registry-username ${{ secrets.DOCKERHUB_USERNAME }} \
+            --registry-password ${{ secrets.DOCKERHUB_READ_TOKEN }} \
+            --dns-name-label posts-${{ secrets.DOCKERHUB_USERNAME }} \
+            --ports 8080 \
+            --os-type Linux \
+            --cpu 1 \
+            --memory 1.5
 
       - name: Run Smoke Test
         run: |
