Add cleanup step to delete existing Azure container group
This ensures any pre-existing container group is deleted before deploying a new one. The step prevents deployment conflicts and handles non-existent containers gracefully without failing the workflow.

--- a/.github/workflows/workflow3.yml
+++ b/.github/workflows/workflow3.yml
@@ -49,6 +49,13 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
+      - name: Delete container group if exists
+        run: |
+          az container delete \
+            --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
+            --name nitflex-production \
+            --yes || true      # Not fail, if not exist
+
       - name: 'Run az commands to deploy container '
         run: |
           az container create \
