Disable container stopping step in workflow3.yml DEVELOP MODE
Commented out the step to stop the container group after tests. This change prevents the automatic halt of the specified container, potentially leaving it running for further use or debugging.

--- a/.github/workflows/workflow3.yml
+++ b/.github/workflows/workflow3.yml
@@ -84,9 +84,9 @@ jobs:
 #          fi
 
       # This Stop the new container just created after all test to avoid to use all credit
-      - name: Stop container group
-        if: always()
-        run: |
-          az container stop \
-            --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
-            --name nitflex-production
+#      - name: Stop container group
+#        if: always()
+#        run: |
+#          az container stop \
+#            --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
+#            --name nitflex-production
