--- a/.github/workflows/workflow3.yml
+++ b/.github/workflows/workflow3.yml
@@ -79,7 +79,7 @@ jobs:
             --name nitflex-production \
             --query "ipAddress.fqdn" -o tsv)
           echo "FQDN=$FQDN" >> $GITHUB_OUTPUT
-          echo "Application URL: http://$FQDN:8080"
+          echo "Application URL: https://$FQDN:8080"
 
       - name: Run Smoke Test
         run: |
@@ -153,9 +153,9 @@ jobs:
           fi
 
       # This Stop the new container just created after all test to avoid to use all credit
-      - name: Stop container group
-        if: always()
-        run: |
-          az container stop \
-            --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
-            --name nitflex-production
+#      - name: Stop container group
+#        if: always()
+#        run: |
+#          az container stop \
+#            --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
+#            --name nitflex-production
