--- a/.github/workflows/workflow3.yml
+++ b/.github/workflows/workflow3.yml
@@ -100,7 +100,7 @@ jobs:
       - name: Run Smoke Test
         run: |
           URL="http://${{ steps.get-url.outputs.fqdn }}:8080"
-          ENDPOINTS=("/api/films/" "/films/new" "/api/users/favorites")
+          ENDPOINTS=("/api/films/" "/films/new" "/users/favorites")
 
           echo "➡️  Esperando a que los endpoints respondan…"
 
