--- a/.github/workflows/workflow4.yml
+++ b/.github/workflows/workflow4.yml
@@ -20,8 +20,17 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        browser: [chrome, firefox]
+        include:
+          - os: ubuntu-latest
+            browser: chrome
+          - os: ubuntu-latest
+            browser: firefox
+          - os: windows-latest
+            browser: chrome
+          - os: windows-latest
+            browser: firefox
+          - os: macos-latest
+            browser: chrome
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -76,7 +85,7 @@ jobs:
       - name: Run Integration Tests
         run: mvn -Dtest='es.codeurjc.web.nitflex.integration.**.*' test
 
-      - name: Run System Tests (no multibrowser)
+      - name: Run System Tests (except multibrowser)
         run: mvn -Dtest='es.codeurjc.web.nitflex.e2e.**.*' test
 
       - name: Build Docker image
