--- a/.github/workflows/workflow3.yml
+++ b/.github/workflows/workflow3.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches: [ main ]
   workflow_dispatch:
+  push:
+    branches: [ main ]
+    paths-ignore:
+      - '.github/workflows/**'
+      - 'README.md'
 
 permissions:
   id-token: write
