Quit firefox from macos due to error

--- a/.github/workflows/workflow4.yml
+++ b/.github/workflows/workflow4.yml
@@ -32,8 +32,8 @@ jobs:
             browser: firefox
           - os: macos-latest
             browser: chrome
-          - os: macos-latest
-            browser: firefox
+          # - os: macos-latest
+          #   browser: firefox
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
