Añadir soporte para Firefox en macOS en las pruebas multibrowser y ajustar la configuración del entorno del navegador

--- a/.github/workflows/workflow4.yml
+++ b/.github/workflows/workflow4.yml
@@ -54,11 +54,18 @@ jobs:
         run: echo "BROWSER=${{ matrix.browser }}" >> $GITHUB_ENV
 
       - name: Set browser environment
+        shell: bash
         run: |
-          if [ "${{ matrix.browser }}" = "firefox" ] && [ "${{ runner.os }}" = "macOS" ]; then
+          if [[ "${{ matrix.browser }}" == "firefox" && "${{ runner.os }}" == "macOS" ]]; then
             echo "SELENIUM_BROWSER=firefox" >> $GITHUB_ENV
             echo "MOZ_HEADLESS=1" >> $GITHUB_ENV
+            echo "FIREFOX_BIN=/Applications/Firefox.app/Contents/MacOS/firefox" >> $GITHUB_ENV
           fi
+
+      - name: Setup Firefox (macOS)
+        if: matrix.os == 'macos-latest' && matrix.browser == 'firefox'
+        run: |
+          brew install --cask firefox
 
       - name: Run Selenium multibrowser test
         run: mvn -Dtest='es.codeurjc.web.nitflex.e2e.TestSeleniumMultibrowser' test
