--- a/.github/workflows/workflow4.yml
+++ b/.github/workflows/workflow4.yml
@@ -166,6 +166,12 @@ jobs:
     runs-on: ubuntu-latest
     if: success()
     steps:
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
       - name: Pull and Retag Docker image
         run: |
           DATE=$(date +'%Y-%m-%d')
