--- a/.github/workflows/workflow3.yml
+++ b/.github/workflows/workflow3.yml
@@ -41,10 +41,10 @@ jobs:
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_TOKEN }}
 
       - name: Generate Docker image
-        run: mvn spring-boot:build-image -DskipTests -Dspring-boot.build-image.imageName=${{ secrets.DOCKER_USERNAME }}/nitflex:${{ github.sha }}
+        run: mvn spring-boot:build-image -DskipTests -Dspring-boot.build-image.imageName=${{ secrets.DOCKER_USERNAME }}/nitflex:${{ steps.version.outputs.version }}
 
       - name: Push image to DockerHub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/nitflex:${{ github.sha }}
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/nitflex:${{ steps.version.outputs.version }}
 
       - name: 'Az CLI login'
         uses: azure/login@v2
@@ -65,7 +65,7 @@ jobs:
           az container create \
             --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
             --name nitflex-production \
-            --image ${{ secrets.DOCKER_USERNAME }}/nitflex:${{ github.sha }} \
+            --image ${{ secrets.DOCKER_USERNAME }}/nitflex:${{ steps.version.outputs.version }} \
             --registry-login-server index.docker.io \
             --registry-username ${{ secrets.DOCKER_USERNAME }} \
             --registry-password ${{ secrets.DOCKER_TOKEN }} \
@@ -90,17 +90,17 @@ jobs:
           npm install -g artillery
           artillery run src/test/java/es/codeurjc/web/nitflex/artillery/smoke-test.yml
       
-      - name: Deploy to Azure (production)
-        run: |
-          # Eliminar el contenedor existente si existe
-          az container delete \
-            --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
-            --name nitflex-production \
-            --yes || true
+      # - name: Deploy to Azure (production)
+      #   run: |
+      #     # Eliminar el contenedor existente si existe
+      #     az container delete \
+      #       --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
+      #       --name nitflex-production \
+      #       --yes || true
           
-          # Esperar unos segundos para asegurar que el contenedor se ha eliminado
-          sleep 5
+      #     # Esperar unos segundos para asegurar que el contenedor se ha eliminado
+      #     sleep 5
           
-          az container create \
-            --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
-            --name nitflex-production \
+      #     az container create \
+      #       --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
+      #       --name nitflex-production \
